--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
+    "react-native-svg": "^15.9.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2"
   },
